@@ -124,3 +124,4 @@
 20240229 ./watchlist/hia-parse-http-cjdradio.sh updated.
 20240229 ./watchlist/hia-parse-nntp.sh added.
 20240229 ./watchlist/hia-parse-nntp.sh updated.
+20240305 ./watchlist/hia-scan-tcp.sh updated.
